# PyElastica-SCR

./: Makefile  README.md  pyproject.toml
elastica-scr/: __init__.py  _so3.py  version.py
elastica-scr/rod/: stable_cosserat_rod.py
elastica-scr/systems/: protocol.py
elastica-scr/timestepper/: implicit_stepper.py
elastica_scr/: __init__.py  _so3.py
elastica_scr/rod/: CROEF.py  equations.py  stable_cosserat_rod.py
elastica_scr/systems/: protocol.py
elastica_scr/timestepper/: implicit_stepper.py
examples/AxialStretchingCase/: run_axial_stretching.py
examples/ButterflyCase/: run_butterfly.py
examples/CatenaryCase/: run_catenary.py
examples/TimoshenkoBeamCase/: run_timoshenko.py  timoshenko_postprocessing.py
